Refs #34383 -- Corrected margins in admin fieldsets with multiple fields on the same line on small screens.
Regression in d687febce5868545f99974d2499a91f81a32fef5.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -199,12 +199,6 @@ input[type="submit"], button {
         min-height: 0;
     }
 
-    fieldset .fieldBox {
-        float: none;
-        margin: 0 -10px;
-        padding: 0 10px;
-    }
-
     fieldset .fieldBox + .fieldBox {
         margin-top: 10px;
         padding-top: 10px;
